--- a/src/styles.scss
+++ b/src/styles.scss
@@ -39,6 +39,6 @@ html, body { height: 100%; }
 body {
     margin: 0;
     font-family: Roboto, "Helvetica Neue", sans-serif;
-    background-color: #29B6F6;
+    // background-color: #29B6F6;
     text-align: center;
 }
