--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,7 +20,14 @@ $preference-ranker-warn: mat.define-palette(mat.$red-palette);
 
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
-$preference-ranker-theme: mat.define-light-theme((
+$preference-ranker-light-theme: mat.define-light-theme((
+    color: (
+    primary: $preference-ranker-primary,
+    accent: $preference-ranker-accent,
+    warn: $preference-ranker-warn,
+    )
+));
+$preference-ranker-dark-theme: mat.define-dark-theme((
     color: (
     primary: $preference-ranker-primary,
     accent: $preference-ranker-accent,
@@ -31,7 +38,7 @@ $preference-ranker-theme: mat.define-light-theme((
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
-@include mat.all-component-themes($preference-ranker-theme);
+@include mat.all-component-themes($preference-ranker-light-theme);
 
 /* You can add global styles to this file, and also import other style files */
 
@@ -41,4 +48,13 @@ body {
     font-family: Roboto, "Helvetica Neue", sans-serif;
     // background-color: #29B6F6;
     text-align: center;
+}
+
+@media (prefers-color-scheme: dark) {
+    @include mat.all-component-colors($preference-ranker-dark-theme);
+
+    body {
+        background-color: #333333;
+        color: white;
+    }
 }
