--- a/src/app/option-entry/option-entry.component.html
+++ b/src/app/option-entry/option-entry.component.html
@@ -1,6 +1,6 @@
 <h2>Enter the Options You Want to Rank</h2>
 <mat-form-field appearance="fill" color="accent">
     <mat-label>Your Options</mat-label>
-    <textarea matInput></textarea>
+    <textarea matInput rows="10"></textarea>
     <mat-hint>Put each item onto its own line.</mat-hint>
 </mat-form-field>
