Created button to advance past entry.

--- a/src/app/option-entry/option-entry.component.html
+++ b/src/app/option-entry/option-entry.component.html
@@ -4,3 +4,6 @@
     <textarea matInput rows="10"></textarea>
     <mat-hint>Put each item onto its own line.</mat-hint>
 </mat-form-field>
+<p>
+    <button mat-raised-button color="accent">Start Ranking</button>
+</p>
