Added validation to option entry.

--- a/src/app/option-entry/option-entry.component.html
+++ b/src/app/option-entry/option-entry.component.html
@@ -1,9 +1,9 @@
 <h2>Enter the Options You Want to Rank</h2>
 <mat-form-field appearance="fill" color="accent">
     <mat-label>Your Options</mat-label>
-    <textarea matInput rows="10"></textarea>
+    <textarea matInput rows="10" [formControl]="formControl"></textarea>
     <mat-hint>Put each item onto its own line.</mat-hint>
 </mat-form-field>
 <p>
-    <button mat-raised-button color="accent">Start Ranking</button>
+    <button mat-raised-button color="accent" [disabled]="shouldDisableButton">Start Ranking</button>
 </p>
