--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,3 +5,6 @@
     <app-option-sort *ngSwitchCase="'sort'" [options]="options" (submit)="switchToDisplay($event)"></app-option-sort>
     <app-option-display *ngSwitchCase="'display'" [options]="options"></app-option-display>
 </ng-container>
+<footer>
+    <p class="small">Copyright &copy; 2023 Brendan Lestander</p>
+</footer>
