Copyright notice should now adhere to bottom.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -41,7 +41,7 @@ $preference-ranker-dark-theme: mat.define-dark-theme((
 
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
+html, body { height: 100%; box-sizing: border-box; }
 body {
     margin: 0;
     font-family: Roboto, "Helvetica Neue", sans-serif;
@@ -58,7 +58,7 @@ body {
     }
 }
 
-.small {
+footer {
     font-size: 12px;
     line-height: 20px;
     font-weight: 400;
