--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
-<h1>Preference Ranker</h1>
-<p>A simple tool for ranking a list of options using a series of direct one-on-one comparisons.</p>
-<ng-container [ngSwitch]="stage">
-    <app-option-entry *ngSwitchCase="'list'" (optionsSubmit)="switchToSort($event)"></app-option-entry>
-    <app-option-sort *ngSwitchCase="'sort'" [options]="options" (submit)="switchToDisplay($event)"></app-option-sort>
-    <app-option-display *ngSwitchCase="'display'" [options]="options"></app-option-display>
-</ng-container>
-<footer>
-    <p class="small">Copyright &copy; 2023 Brendan Lestander</p>
-</footer>
+<div id="content">
+    <h1>Preference Ranker</h1>
+    <p>A simple tool for ranking a list of options using a series of direct one-on-one comparisons.</p>
+    <ng-container [ngSwitch]="stage">
+        <app-option-entry *ngSwitchCase="'list'" (optionsSubmit)="switchToSort($event)"></app-option-entry>
+        <app-option-sort *ngSwitchCase="'sort'" [options]="options" (submit)="switchToDisplay($event)"></app-option-sort>
+        <app-option-display *ngSwitchCase="'display'" [options]="options"></app-option-display>
+    </ng-container>
+</div>
+<footer>Copyright &copy; 2023 Brendan Lestander</footer>
